[package]
name = "tax_calculator"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
calamine = { version = "0.25.0", features = ["dates"] }
chrono = "0.4.38"
colog = "1.3.0"
diesel = { version = "2.1.6", features = ["sqlite", "returning_clauses_for_sqlite_3_35"] }
dotenvy = "0.15.7"
log = "0.4.21"
regex = "1.10.4"
serde = { version = "1.0", features = ["derive"] }
sha256 = { version = "1.5.0", default-features = false }
toml = "0.8.14"